# VSItoWireMockConverter

./: .gitignore  Anonymized_sample.vsi  README.md  pyproject.toml  pytest.ini  test_config_phase2.yaml  test_wiremock_cloud.yaml  vsi2wm.yaml  vsiConverter.py  vsiConverter_v2.py
ZelleFIS/: report.json  stubs_index.json  summary.txt  wiremock-cloud-export.json
custom_output/: summary.txt
docs/: 1_todo_wiremock_cloud_default.md  3_mockapi_upload_spec.md  4_feature_gaps_analysis.md  cli_reference_cloud_default.md  feature_gaps_analysis.md  mapping_rules.md  quickstart.md  spec.md  todo.md  troubleshooting.md
multiple_transactions/: scenario_report.json  summary.txt
scripts/: build_pyinstaller.py
simple_rest/: report.json  summary.txt
test_output_cloud/: summary.txt  wiremock-cloud-export.json
test_output_cloud_test/: report.json  summary.txt
test_output_config/: summary.txt
test_output_enhanced/: report.json  summary.txt  wiremock-cloud-export.json
test_output_golden/: stubs_index.json  summary.txt
test_output_large_files/: report.json  stubs_index.json  summary.txt
test_output_milestone2/: report.json
test_output_milestone3/: report.json
test_output_milestone4/: report.json  summary.txt
test_output_milestone5/: report.json  stubs_index.json  summary.txt
test_output_multiple/: report.json  stubs_index.json  summary.txt
test_output_override/: stubs_index.json  summary.txt
test_output_simple/: report.json
test_output_soap/: report.json
tests/: README_Phase6_Tests.md  __init__.py  test_cli.py  test_cli_phase6.py  test_cli_strict_mode.py  (+14 more)
(+45 files in other folders)
